add Util Service and other improvements