@@ -1,3 +1,4 @@
+import lombok.Data;
 import lombok.RequiredArgsConstructor;
 
 import java.time.Instant;
@@ -6,17 +7,18 @@ import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
-
+@Data
 @RequiredArgsConstructor
 
 public class ShopService {
-    private ProductRepo productRepo = new ProductRepo();
-    private OrderRepo orderRepo = new OrderMapRepo();
+    private final ProductRepo productRepo = new ProductRepo();
+    private final OrderRepo orderRepo = new OrderMapRepo();
+    private final UtilService utilService = new UtilService();
 
-    public ShopService(ProductRepo productRepo, OrderRepo orderRepo) {
-        this.productRepo =productRepo;
-        this.orderRepo =orderRepo;
-    }
+//    public ShopService(ProductRepo productRepo, OrderRepo orderRepo) {
+//        this.productRepo =productRepo;
+//        this.orderRepo =orderRepo;
+//    }
 
 
     public Order addOrder(List<String> productIds) throws IdNotFoundException{
@@ -25,31 +27,14 @@ public class ShopService {
                 Product productToOrder = productRepo.getProductById(productId).orElseThrow(()->new IdNotFoundException(productId));
                 products.add(productToOrder);
         }
-//        for (String productId : productIds) {
-//            Product productToOrder = productRepo.getProductById(productId);
-//            if (productToOrder == null) {
-//                System.out.println("Product mit der Id: " + productId + " konnte nicht bestellt werden!");
-//                return null;
-//            }
-//            products.add(productToOrder);
-//        }
-        Order newOrder = new Order(UUID.randomUUID().toString(), products, OrderStatus.PROCESSING, Instant.now());
+        Order newOrder = new Order(utilService.generateRandomId(), products, OrderStatus.PROCESSING, utilService.getCurrentTime());
         return orderRepo.addOrder(newOrder);
     }
 
     public List<Order> getOrdersOfSpecificOrderStatus(OrderStatus orderStatus) {
-
-        return switch (orderStatus) {
-            case PROCESSING -> orderRepo.getOrders().stream()
-                    .filter(c -> c.orderStatus().equals(OrderStatus.PROCESSING))
-                    .collect(Collectors.toList());
-            case IN_DELIVERY -> orderRepo.getOrders().stream()
-                    .filter(c -> c.orderStatus().equals(OrderStatus.IN_DELIVERY))
-                    .collect(Collectors.toList());
-            case COMPLETED -> orderRepo.getOrders().stream()
-                    .filter(c -> c.orderStatus().equals(OrderStatus.COMPLETED))
-                    .collect(Collectors.toList());
-        };
+        return orderRepo.getOrders().stream()
+                .filter(c->c.orderStatus().equals(orderStatus))
+                .toList();
     }
 
     public OrderStatus updateOrderStatus(String orderId, OrderStatus newOrderStatus) {
